<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history"
        android:title="@string/text_history" />
    <item
        android:id="@+id/action_events"
        android:icon="@drawable/ic_events"
        android:title="@string/text_events" />
    <item
        android:id="@+id/action_add_event"
        android:icon="@drawable/ic_add"
        android:title="@string/text_add_event" />
    <item
        android:id="@+id/action_my_events"
        android:icon="@drawable/ic_my_events"
        android:title="@string/my_events" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/text_profile" />
</menu>