<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextEmail"
        android:autofillHints="emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/text_e_mail"
        android:text="s2210307057@fhooe.at"
        android:inputType="textEmailAddress"
        android:padding="16dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:autofillHints="password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextEmail"
        android:layout_marginTop="16dp"
        android:hint="@string/text_password"
        android:text="Passwort"
        android:inputType="textPassword"
        android:padding="16dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_login"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="20dp"
        android:padding="10dp"/>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_register"
        android:layout_below="@id/buttonLogin"
        android:layout_marginTop="20dp"
        android:padding="10dp"/>

</RelativeLayout>