<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="@dimen/distance_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_register_yourself"
            android:textSize="@dimen/font_size_large"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_marginTop="@dimen/distance_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_e_mail" />

        <EditText
            android:id="@+id/editTextEmail"
            android:autofillHints="emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/distance_small" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_marginTop="@dimen/distance_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_password"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:autofillHints="password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="8dp" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_marginTop="@dimen/distance_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_password"/>

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:autofillHints="password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/distance_small" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_marginTop="@dimen/distance_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_firstname" />

        <EditText
            android:id="@+id/editTextFirstName"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_small" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_marginTop="@dimen/distance_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_lastname"/>

        <EditText
            android:id="@+id/editTextLastName"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_small" />

        <TextView
            style="@style/TextAppearance.MaterialComponents.Overline"
            android:layout_marginTop="@dimen/distance_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_study_program"/>

        <Spinner
            android:id="@+id/spinnerCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_small"
            android:padding="@dimen/distance_small"/>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_register"
            android:layout_marginTop="@dimen/distance_small"
            android:layout_gravity="end"/>

    </LinearLayout>
</ScrollView>